--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -40,6 +40,8 @@
 
     <p>Sales staff type: {{ customer.salesStaffType | getCustomerSalesStaffTypeText }}</p>
 
+    <p>Send auto-generated pay-on-account invoices to: {{ customer.payOnAccountInvoiceRecipient | getCustomerPayOnAccountInvoiceRecipientText }}</p>
+
     </div>
 
     <h2>Edit</h2>
@@ -62,6 +64,15 @@
                     name="customerSalesStaffType"
                     ng-model="customerForEditing.salesStaffType"
                     ng-options="option.value as option.label for option in salesStaffTypeOptions"></select>
+            </div>
+
+            <div class="form-group">
+                <label>Auto-generated pay-on-account invoice recipient</label>
+                <select class="form-control input-lg"
+                    required
+                    name="customerPayOnAccountInvoiceRecipient"
+                    ng-model="customerForEditing.payOnAccountInvoiceRecipient"
+                    ng-options="option.value as option.label for option in payOnAccountInvoiceRecipientOptions"></select>
             </div>
 
             <input class="btn btn-primary btn-lg" type="submit" value="Save" />
