--- a/src/web/templates/general/checkout-delivery-details.html
+++ b/src/web/templates/general/checkout-delivery-details.html
@@ -9,12 +9,12 @@
 
             <p ng-if="isNewDeliveryAddress">Where do you want your food delivered?</p>
 
-            <cp-checkout-address-form address="address" ng-if="isNewDeliveryAddress"></cp-checkout-address-form>
+            <cp-checkout-address-form address="deliveryAddress" ng-if="isNewDeliveryAddress"></cp-checkout-address-form>
 
             <div ng-if="!isNewDeliveryAddress">
                 <p>{{ package.vendor.name }} will deliver your package to:</p>
 
-                <p class="cp-checkout-address" ng-bind-html="address | addressSingleLineFormatter:'<br />'"></p>
+                <p class="cp-checkout-address" ng-bind-html="deliveryAddress | addressSingleLineFormatter:'<br />'"></p>
 
                 <hr />
 
@@ -31,7 +31,7 @@
                                 type="text"
                                 required
                                 aria-required="true"
-                                ng-model="address.officeManagerName" />
+                                ng-model="deliveryAddress.officeManagerName" />
                         </div>
 
                         <div class="cp-form-group">
@@ -45,7 +45,7 @@
                                 type="tel"
                                 required
                                 aria-required="true"
-                                ng-model="address.landlineNumber" />
+                                ng-model="deliveryAddress.landlineNumber" />
                         </div>
 
                         <hr />
@@ -58,7 +58,7 @@
                                     id="delivery_instruction"
                                     name="deliveryInstruction"
                                     rows="6"
-                                    ng-model="address.deliveryInstruction"></textarea>
+                                    ng-model="deliveryAddress.deliveryInstruction"></textarea>
                             </div>
                         </fieldset>
 
@@ -70,7 +70,7 @@
                                     id="parking_suggestion"
                                     name="parkingSuggestion"
                                     rows="6"
-                                    ng-model="address.parkingSuggestion"></textarea>
+                                    ng-model="deliveryAddress.parkingSuggestion"></textarea>
                             </div>
                         </fieldset>
 
