--- a/src/web/templates/directives/cp-address-form-for-delivery.html
+++ b/src/web/templates/directives/cp-address-form-for-delivery.html
@@ -1,6 +1,3 @@
-<form class="cp-form" name="form" ng-submit="save()">
-    <p class="form-error" ng-show="error" ng-bind="error"></p>
-
     <div class="cp-form-group" ng-if="!isAddressLabelLastFormField">
         <label class="cp-form-label" for="address_label">
             {{ isNew ? 'Save address as...' : 'Saved location' }}
@@ -85,7 +82,7 @@
     <div class="cp-form-group">
         <label class="cp-form-label" for="landline_number">
             Contact number
-            <span class="form-element-invalid" ng-show="form.$submitted && form.LandlineNumber.$error.required">(Contact number is required.)</span>
+            <span class="form-element-invalid" ng-show="form.$submitted && form.landlineNumber.$error.required">(Contact number is required.)</span>
         </label>
 
         <input class="cp-form-control" id="landline_number" name="landlineNumber" type="tel"
@@ -120,7 +117,3 @@
 
         <input class="cp-form-control" name="addressLabel" ng-model="address.label" size="30" />
     </div>
-
-    <input type="submit" value="{{ isNew ? 'Save' : 'Save changes' }}" class="btn btn-primary" ng-if="!isFormSubmitButtonHidden" />
-    <a class="btn btn-link" ng-click="cancel()" ng-if="!isFormSubmitButtonHidden">Cancel</a>
-</form>
