Allow staff to masquerade for customer/vendor pages.

--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -79,6 +79,8 @@
             <a ng-href="/admin/user/{{ user.id }}">View/edit user</a>
             <br />
             <a ng-click="removeUserFromVendor(user)">Remove user from vendor</a>
+            <br />
+            <a ng-click="masquerade(user)" class="cp-masquerade">Masquerade</a>
         </li>
     </ul>
 
