--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -3,6 +3,8 @@
 
     <p>
         <a ng-href="/admin/global-id-lookup/{{ customer.id }}">View in global ID lookup</a>
+        <br />
+        <a ng-click="masquerade()" class="cp-masquerade">Masquerade</a>
     </p>
 
     <h2>History</h2>
