Add ability for staff to download list of customers as CSV.

--- a/src/web/templates/admin/customers.html
+++ b/src/web/templates/admin/customers.html
@@ -2,4 +2,21 @@
     <h1>Customers</h1>
 
     <div ui-grid="gridOptions" ui-grid-pagination id="customers-table"></div>
+
+    <h2>Download CSV</h2>
+
+    <p>This will create a CSV of the filtered customers.</p>
+
+    <p>Select the fields you want to include:</p>
+
+    <p ng-repeat="field in csvFields">
+        <label for="cp-csv-field-{{ field.field }}">{{ field.label }}</label>
+        <input type="checkbox"
+            id="cp-csv-field-{{ field.field }}"
+            ng-model="field.isEnabled" />
+    </p>
+
+    <p>
+        <button ng-click="createCustomersCsv()" class="btn btn-primary cp-download-csv">Download</button>
+    </p>
 </div>
