--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -77,6 +77,13 @@
                     ng-options="option.value as option.label for option in payOnAccountInvoiceRecipientOptions"></select>
             </div>
 
+            <div class="form-group">
+                <label>Accounts email (they will be copied on into receipts and invoices)</label>
+                <input class="form-control input-lg"
+                    type="email"
+                    ng-model="customerForEditing.accountsEmail" />
+            </div>
+
             <input class="btn btn-primary btn-lg" type="submit" value="Save" />
         </fieldset>
     </form>
