--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -28,6 +28,13 @@
         </div>
 
         <div class="form-group">
+            <label for="cp-vendor-name">Main email (does not have to be a user's email)</label>
+            <input class="form-control input-lg" id="cp-vendor-main-email"
+                required
+                ng-model="vendor.mainEmail" />
+        </div>
+
+        <div class="form-group">
             <label for="description">Bio</label>
             <textarea class="form-control input-lg" id="description" required rows="6" aria-required="true" ng-model="vendor.description"></textarea>
         </div>
