--- a/src/web/templates/admin/user.html
+++ b/src/web/templates/admin/user.html
@@ -8,12 +8,28 @@
     <h2>Details</h2>
 
     <div id="cp-user-details">
-        <p>Name: {{ user.name }}</p>
-
-        <p>Email: {{ user.email }}</p>
-
         <p>Last login: {{ user.lastLogin | date:'dd/MM/yyyy' }}</p>
-    </div>
+    </form>
+
+    <h2>Edit details</h2>
+
+    <form role="form" ng-submit="save()">
+        <div class="form-group">
+            <label for="cp-user-name">Name</label>
+            <input class="form-control input-lg" id="cp-user-name"
+                required
+                ng-model="user.name" />
+        </div>
+
+        <div class="form-group">
+            <label for="cp-user-name">Email</label>
+            <input class="form-control input-lg" id="cp-user-email"
+                required
+                ng-model="user.email" />
+        </div>
+
+        <input class="btn btn-primary btn-lg" type="submit" value="Save">
+    </form>
 
     <div ng-if="isVendor && vendor">
         <h2>Vendor user actions</h2>
