--- a/src/web/templates/customer/meal-plan/confirmation.html
+++ b/src/web/templates/customer/meal-plan/confirmation.html
@@ -29,7 +29,7 @@
                             {{ proposedOrder.package.name }}
                         </a>
                     </td>
-                    <td>{{ proposedOrder.realOrderFacade.totalAmountAfterVoucher | currency:'£' }}</td>
+                    <td>{{ proposedOrder.realOrderFacade.totalAmountAfterPromoCode | currency:'£' }}</td>
                 </tr>
             </tbody>
         </table>
