--- a/src/web/scss/directives/cp-review-meal-plan.scss
+++ b/src/web/scss/directives/cp-review-meal-plan.scss
@@ -2,6 +2,20 @@ cp-review-meal-plan {
     display: block;
 }
 
+div.cp-meal-plan-review-order-review-button {
+    float: right;
+    margin: 30px 20px;
+
+    a {
+        background-color: $cp-secondary-color;
+        border-radius: 20px;
+        color: white;
+        font-size: 1em;
+        font-weight: bolder;
+        padding: 6px 11px;
+    }
+}
+
 li.cp-meal-plan-review-order {
     &.cp-end-of-week {
         border-bottom: none;
